--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,59 @@ ENV/
 
 # Rope project settings
 .ropeproject
+detections/MOT16-06.npy
+detections/MOT16-01.npy
+detections/MOT16-03.npy
+detections/MOT16-07.npy
+detections/MOT16-08.npy
+detections/MOT16-12.npy
+detections/MOT16-14.npy
+resources/detection/MOT16-02.npy
+resources/detection/MOT16-04.npy
+resources/detection/MOT16-05.npy
+resources/detection/MOT16-09.npy
+resources/detection/MOT16-10.npy
+resources/detection/MOT16-11.npy
+resources/detection/MOT16-13.npy
+resources/network/mars-small128.ckpt-68577
+resources/network/mars-small128.ckpt-68577.meta
+resources/network/mars-small128.pb
+results/MOT16-04.txt
+results/MOT16-05.txt
+results/MOT16-09.txt
+results/MOT16-10.txt
+results/MOT16-11.txt
+results/MOT16-13.txt
+results/MOT1602.csv
+results/mydata/MOT16-02.csv
+results/mydata/MOT16-04.txt
+results/mydata/MOT16-05.txt
+results/mydata/MOT16-09.txt
+results/mydata/MOT16-10.txt
+results/mydata/MOT16-11.txt
+results/mydata/MOT16-13.txt
+test0/MOT16-01.npy
+tmp/hypotheses.txt
+tmp/hypotheses0.txt
+tools/freeze_model.py
+tools/generate_detections.py
+train/MOT16-02.npy
+train/MOT16-04.npy
+train/MOT16-05.npy
+train/MOT16-09.npy
+train/MOT16-10.npy
+train/MOT16-11.npy
+train/MOT16-13.npy
+train0/MOT16-02.npy
+train0/MOT16-04.npy
+train0/MOT16-05.npy
+train0/MOT16-09.npy
+train0/MOT16-10.npy
+train0/MOT16-11.npy
+train0/MOT16-13.npy
+txt/GITHUB.txt
+txt/GT.txt
+txt/MINE.txt
+video/GITHUB.avi
+video/GT.avi
+video/MINE.avi
